syntax = "proto3";
package proto;
option go_package = "/pb";
import "/base.proto";

service Source {
  // Get all tables the source plugin supports
  rpc GetTables(GetTables.Request) returns (GetTables.Response);
  // Get an example configuration for the source plugin
  rpc GetExampleConfig(GetExampleConfig.Request) returns (GetExampleConfig.Response);
  // Fetch resources
  rpc Fetch(Fetch.Request) returns (stream Fetch.Response);
}

message Fetch {
  message Request {
    // Holds information such as credentials, regions, accounts, etc'
    bytes config = 1;
  }
  message Response {
    // marshalled []*schema.Resources
    bytes resources = 1;
    // marshalled goschemajson.Result
    bytes jsonschema_result = 2;
  }
}

message GetTables {
  message Request {}
  message Response {
    string name = 1;
    string version = 2;
    // Marshalled []*schema.Table
    bytes tables = 3;
  }
}

